fix too long title in toc

--- a/src/components/TableOfContents/toc.module.less
+++ b/src/components/TableOfContents/toc.module.less
@@ -1,7 +1,7 @@
 @import (reference) '../../styles/index.less';
 
 .toc-container {
-  margin: 2em;
+  margin: 1em;
 }
 
 .toc {
@@ -45,7 +45,7 @@ ul.toc > li {
 
 .toc a {
   display: block;
-  width: 110px;
+  width: 90%;
   margin-left: -1px;
   padding-left: 16px;
   overflow: hidden;
